# SDR_main

./: .gitignore  .mcp.json  PLAN.md  READ.ME  README  README.md  plotRangeProfile.m  process.asv  process.m  process_new.m
linux/: .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
linux/docs/: usbdevice_doc.tex
linux/docs/doxygen/html/: _fake_usb_backend_8hpp.html  _fake_usb_backend_8hpp.js  _fake_usb_backend_8hpp__dep__incl.md5  _fake_usb_backend_8hpp__incl.md5  _fake_usb_backend_8hpp_source.html  _i_usb_backend_8hpp.html  _i_usb_backend_8hpp.js  _i_usb_backend_8hpp__dep__incl.md5  _i_usb_backend_8hpp__incl.md5  _i_usb_backend_8hpp_source.html  _intel_hex_8cpp.html  _intel_hex_8cpp.js  _intel_hex_8cpp__incl.md5  _intel_hex_8cpp_source.html  _intel_hex_8hpp.html  _intel_hex_8hpp.js  _intel_hex_8hpp__dep__incl.md5  _intel_hex_8hpp__incl.md5  _intel_hex_8hpp_source.html  _iq_writer_8cpp.html  _iq_writer_8cpp.js  _iq_writer_8cpp__incl.md5  _iq_writer_8cpp_source.html  _iq_writer_8hpp.html  _iq_writer_8hpp.js  _iq_writer_8hpp__dep__incl.md5  _iq_writer_8hpp__incl.md5  _iq_writer_8hpp_source.html  _protocol_8cpp.html  _protocol_8cpp.js  _protocol_8cpp__incl.md5  _protocol_8cpp_source.html  _protocol_8hpp.html  _protocol_8hpp.js  _protocol_8hpp__dep__incl.md5  _protocol_8hpp__incl.md5  _protocol_8hpp_source.html  _radar_session_8cpp.html  _radar_session_8cpp__incl.md5  _radar_session_8cpp_source.html  (+227 more)
linux/docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  (+64 more)
linux/include/pupradar/: IUsbBackend.hpp  IntelHex.hpp  IqWriter.hpp  Protocol.hpp  RadarSession.hpp  UsbDevice.hpp
linux/latex/: md__r_e_a_d_m_e.tex  refman.tex
linux/scripts/: 99-pupradar.rules  build_cross.sh  build_native.sh  deploy_pi.sh
linux/src/: IntelHex.cpp  IqWriter.cpp  Protocol.cpp  RadarSession.cpp  UsbDevice.cpp  board_info.cpp  main.cpp
linux/tests/: FakeUsbBackend.hpp  test_framework.hpp  test_intel_hex.cpp  test_iq_writer.cpp  test_main.cpp  test_protocol.cpp  test_radar_session.cpp
linux/toolchains/: aarch64-linux-gnu.cmake
(+26 files in other folders)
